--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,7 +13,7 @@ html,body {
     top: 50%;
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
-    z-index: 1;
+    z-index: 3;
 }
 
 .start {
@@ -26,7 +26,7 @@ html,body {
     top: 50%;
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
-    z-index: 2;
+    z-index: 3;
 }
 
 .bar1 {
@@ -107,6 +107,58 @@ html,body {
     left:10%;
     width: 80%;
     height: 80%;
-    background-color: white;
+    background-color: aliceblue;
     z-index: 3;
 }
+
+.kekka {
+    position: absolute;
+    font-size: 3em;
+    white-space: nowrap;
+    color: #799dec;
+    font-weight: bold;
+    top: 40%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.32), 0px 1px 0px #6182ca, 0px 2px 0px #4f6aa7, 0px 2px 0px #5470ad;
+}
+
+.retry{
+    position:absolute;
+    top: 60%;
+    left:50%;
+    margin:0;
+    transform: translateY(-50%) translateX(-50%);
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 3em;
+    white-space: nowrap;
+    color: #799dec;
+    text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.32), 0px 1px 0px #6182ca, 0px 2px 0px #4f6aa7, 0px 2px 0px #5470ad;
+}
+
+.time {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background-color:#00cc99;
+    border-radius:10px;
+    height: 50px;
+    width: 50px;
+    animation: rotate;
+    animation-delay: 3s;
+    animation-duration:15s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+    z-index: 2;
+}
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+        }
+    100% {
+        transform: rotate(6480deg);
+    } 
