--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,7 +1,19 @@
+/* This is a CSS file */
+/* スクロール禁止 */
 html,body {
-  overflow: hidden
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
 }
 
+/* リンクを押した時の青い枠を非表示にする */
+a { -webkit-tap-highlight-color:rgba(0, 0, 0, 0)!important; }
 
 .counter {
     position: absolute;
@@ -27,6 +39,12 @@ html,body {
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
     z-index: 3;
+}
+
+div {
+    margin: 0;
+    padding: 0;
+    border: none;
 }
 
 .bar1 {
@@ -135,6 +153,11 @@ html,body {
     white-space: nowrap;
     color: #799dec;
     text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.32), 0px 1px 0px #6182ca, 0px 2px 0px #4f6aa7, 0px 2px 0px #5470ad;
+}
+
+.retry:active {
+    top:61%;
+    text-shadow: none;
 }
 
 .time {
