--- a/www/css/styleindex.css
+++ b/www/css/styleindex.css
@@ -1,10 +1,21 @@
 /* This is a CSS file */
+div {
+    position:absolute;
+    top: 40%;
+    left:50%;
+    margin:0;
+    transform: translateY(-50%) translateX(-50%);
+    text-decoration: none;
+    font-weight: bold;
+    white-space: nowrap;
+    font-size: 70px;
+    color: #799dec;
+    text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.32), 0px 1px 0px #6182ca, 0px 1px 0px #4f6aa7, 0px 1px 0px #5470ad;
+}
+
 body {
     background-color: #bff6ff;
 }
-
-
-
 .btn{
     position:absolute;
     top: 60%;
@@ -19,6 +30,8 @@ body {
     text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.32), 0px 1px 0px #6182ca, 0px 1px 0px #4f6aa7, 0px 1px 0px #5470ad;
 }
 .btn:active {
-    top:51%;
+    top:61%;
     text-shadow: none;
 }
+
+a { -webkit-tap-highlight-color:rgba(0, 0, 0, 0)!important; }
